✨ add connection_type type support to lease
